k8s/manifests/gakkount/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gakkount
  labels:
    app: gakkount
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gakkount
  template:
    metadata:
      labels:
        component: gakkount
    spec:
      containers:
        - name: gakkount
          image: prmsrswt/gakkount:1.0.0
          ports:
            - containerPort: 8080
