k8s/manifests/gakkount/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gakkount
  labels:
    app: gakkount
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    component: gakkount
