k8s/manifests/gakkount/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gakkount-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - accounts.onprem.dev
      secretName: accounts-onprem-dev
  rules:
    - host: accounts.onprem.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: gakkount
              servicePort: 8080
